--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "@prisma/extension-accelerate": "^1.1.0",
     "hono": "^4.5.11",
     "prisma": "^5.19.1"
   },
